@@ -32,9 +32,9 @@
 	<div id="slideshow">
 		<div><a href="welcome.html"></a></div>
 		<div><a href="usc.html"></a></div>
-		<div><a href="photos.html"></a></div>
-		<div><a href="mobilise.html"></a></div>
 		<div><a href="music.html"></a></div>
+		<div><a href="photos.html"></a></div>
+		<div><a href="ubuntuone.html"></a></div>
 		<div><a href="social.html"></a></div>
 		<div><a href="browse.html"></a></div>
 		<div><a href="office.html"></a></div>
