@@ -1,0 +1,36 @@
+<div class="header"><h1 class="slidetitle" style="overflow: auto;">One account to log in to everything on Ubuntu <div style="float: right;"><img src="icons/U_One_logo.png"></div></h1></div>
+
+<div class="main">
+
+<div class="text">
+
+<div>
+<p><strong>Make the most of Ubuntu with Ubuntu One.</strong><br><br>
+ 
+Ubuntu One is the single account to log in to everything on Ubuntu.</p>
+</div>
+
+<div class="featured">
+
+<ul>
+    <li>
+	<img class="icon" src="icons/u1-icon-apps.png">
+	<p class="caption">Get <strong>new apps</strong> from the Software Center</p>
+	</li>
+	<li>
+	<img class="icon" src="icons/u1-icon-music.png">
+	<p class="caption">Listen to <strong>your music collection</strong> and buy tracks</p>
+	</li>
+	<li>
+	<img class="icon" src="icons/u1-icon-photos.png">
+	<p class="caption">Access <strong>files and photos</strong> from all your devices</p>
+	</li>
+</ul>
+</div>
+
+</div>
+
+<img class="screenshot" src="screenshots/ubuntuone.jpg">
+</div></div>
+
+</div>
