@@ -16,6 +16,10 @@ ubiquity-slideshow-ubuntu (68) UNRELEASED; urgency=low
   * Ubuntu slideshow
     - New copy for Customization, Music and Office slides.
 
+  [ Dmitrijs Ledkovs, Lisette Slegers ]
+  * Ubuntu slideshow
+    - Add updated ubuntu one slide.
+
  -- Dylan McCall <dylanmccall@ubuntu.com>  Thu, 14 Mar 2013 12:44:19 -0700
 
 ubiquity-slideshow-ubuntu (67) raring; urgency=low
